Fix auth shenanigans